--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ html {
   width: 100%;
   height: 100%;
   color: #8e44ad;
-  /* background-image: url("https://r4.wallpaperflare.com/wallpaper/719/114/325/anime-naruto-itachi-uchiha-wallpaper-79b0d83d515a7d6b16f7a8efd0c1763d.jpg");
+  background-image: url("https://r4.wallpaperflare.com/wallpaper/719/114/325/anime-naruto-itachi-uchiha-wallpaper-79b0d83d515a7d6b16f7a8efd0c1763d.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover; */
+  background-size: cover;
 }
 #main {
   width: 100%;
